# TransientTracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/analyze/: main.cpp
apps/generate/: main.cpp
design-docs/: 010-moving-object-detection-poc.md  020-requirements-definition.md  030-algorithm-specification.md  040-cpp-implementation-notes.md  050-synthetic-data-generation.md  060-synthetic-data-generator-development-specification.md  070-synthetic-data-generator-detailed-design.md  080-moving-object-analyzer-development-policy.md  090-moving-object-analyzer-development-specification.md  100-moving-object-analyzer-implementation-plan-and-checklist.md  110-analyzer-autonomous-track-detection.md
include/TransientTracker/analyze/: analysis_config.hpp  analysis_types.hpp  analysis_writer.hpp  analyze_app.hpp  candidate_extractor.hpp  dataset_reader.hpp  frame_aligner.hpp  frame_loader.hpp  frame_normalizer.hpp  math_utils.hpp  reference_builder.hpp  registration_estimator.hpp  track_linker.hpp  truth_evaluator.hpp
include/TransientTracker/synthetic/: dataset_layout.hpp  frame_renderer.hpp  frame_shift_generator.hpp  label_writer.hpp  moving_object_generator.hpp  noise_model.hpp  preview_writer.hpp  scenario_config.hpp  scenario_repository.hpp  star_field_generator.hpp  synthetic_data_app.hpp  synthetic_types.hpp
src/analyze/: analysis_config.cpp  analysis_writer.cpp  analyze_app.cpp  candidate_extractor.cpp  dataset_reader.cpp  frame_aligner.cpp  frame_loader.cpp  frame_normalizer.cpp  reference_builder.cpp  registration_estimator.cpp  track_linker.cpp  truth_evaluator.cpp
src/synthetic/: dataset_layout.cpp  frame_renderer.cpp  frame_shift_generator.cpp  label_writer.cpp  moving_object_generator.cpp  noise_model.cpp  preview_writer.cpp  scenario_config.cpp  scenario_repository.cpp  star_field_generator.cpp  synthetic_data_app.cpp
tests/: analyze_app_smoke_test.cpp  analyze_candidate_test.cpp  analyze_dataset_reader_test.cpp  analyze_registration_test.cpp  analyze_track_linker_test.cpp  synthetic_app_smoke_test.cpp  synthetic_config_test.cpp  synthetic_render_test.cpp  synthetic_truth_test.cpp
